<resources>
    <string name="app_name">Monitor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_launch">LaunchActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- activity_main_drawer -->
    <string name="menu_monitor">Monitor</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="menu_info">Information</string>

    <!-- fragment_monitor -->
    <string name="pan">Schwenk:</string>
    <string name="tild">Neigung:</string>
    <string name="camera_not_connected">Kamera nicht verbunden</string>
    <!-- fragment_monitor - dialog -->
    <string name="dialog_no_connection">Die Kamera wurde nicht gefunden</string>
    <string name="dialog_positive_button">OKAY</string>
    <!-- fragment_monitor - TabLayout -->
    <string name="nav_buttons">Tasten</string>
    <string name="nav_joystick">Joystick</string>
    <string name="nav_input">Slider</string>
    <string name="nav_positions">Positionen</string>

    <!-- fragment_settings -->
    <string name="ip_adress">IP-Adresse</string>
    <string name="username">Benutzername</string>
    <string name="passwort">Passwort</string>
    <string name="button_save">Speichern</string>
    <string name="fields_error">Nicht alle Felder ausgefüllt</string>

    <!-- fragment_positions -->
    <string name="no_positions">Keine Positionen gespeichert</string>

    <!-- fragment_dialog_delete_position -->
    <string name="dialog_delete_position_title">Position löschen</string>
    <string name="delete">Löschen</string>
    <string name="toast_item_deleted">Position gelöscht</string>

    <!-- fragment_dialog_add_position -->
    <string name="dialog_textField_hint">Name der Position</string>
    <string name="dialog_helperText">Vergeben Sie einen Namen für die Position</string>
    <string name="dialog_add_position_title">Aktuelle Position speichern</string>
    <string name="error_no_name">Geben Sie einen Namen für die Position ein</string>
    <string name="cancel">Abbrechen</string>
    <string name="save">Speichern</string>
    <string name="toast_item_added">Position gespeichert</string>

    <!-- fragment_dialog_rename_position -->
    <string name="dialog_rename_position_title">Position umbenennen</string>
    <string name="rename">Umbenennen</string>
    <string name="toast_item_renamed">Position umbenannt</string>
</resources>