<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_monitor">

    <fragment
        android:id="@+id/nav_monitor"
        android:name="projekt.monitor.ui.monitor.MonitorFragment"
        android:label="@string/menu_monitor"
        tools:layout="@layout/fragment_monitor" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="projekt.monitor.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_nav_settings_to_nav_monitor2"
            app:destination="@id/nav_monitor" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="projekt.monitor.ui.info.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" />
</navigation>