<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:stream="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.monitor.MonitorFragment">

    <com.github.niqdev.mjpeg.MjpegSurfaceView
        android:id="@+id/mjpegView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:0.75"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        stream:type="stream_default" />

    <ImageButton
        android:id="@+id/imageButtonNoConnection"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/mjpegView"
        app:layout_constraintEnd_toEndOf="@+id/mjpegView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/mjpegView"
        app:layout_constraintTop_toTopOf="@+id/mjpegView"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageViewArrowR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_right"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/mjpegView"
        app:layout_constraintEnd_toEndOf="@+id/mjpegView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/mjpegView"
        app:layout_constraintTop_toTopOf="@+id/mjpegView"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/imageViewArrowD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_down"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/mjpegView"
        app:layout_constraintEnd_toEndOf="@+id/mjpegView"
        app:layout_constraintStart_toStartOf="@+id/mjpegView"
        app:layout_constraintTop_toTopOf="@+id/mjpegView"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageViewArrowL"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:src="@drawable/ic_left"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/mjpegView"
        app:layout_constraintEnd_toEndOf="@+id/mjpegView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/mjpegView"
        app:layout_constraintTop_toTopOf="@+id/mjpegView"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/imageViewArrowU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_up"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/mjpegView"
        app:layout_constraintEnd_toEndOf="@+id/mjpegView"
        app:layout_constraintStart_toStartOf="@+id/mjpegView"
        app:layout_constraintTop_toTopOf="@+id/mjpegView"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView_camera"
        android:layout_width="@dimen/icon_no_connection"
        android:layout_height="@dimen/icon_no_connection"
        android:layout_marginEnd="32dp"
        android:src="@drawable/ic_camera"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/mjpegView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView_line_right"
        app:layout_constraintTop_toTopOf="@+id/imageView_line_right" />

    <ImageView
        android:id="@+id/imageView_smartphone"
        android:layout_width="@dimen/icon_no_connection"
        android:layout_height="@dimen/icon_no_connection"
        android:layout_marginStart="32dp"
        android:src="@drawable/ic_smartphone"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/mjpegView"
        app:layout_constraintEnd_toStartOf="@+id/imageView_line_left"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/mjpegView"
        app:layout_constraintTop_toTopOf="@+id/mjpegView"
        app:layout_constraintVertical_bias="0.397" />

    <ImageView
        android:id="@+id/imageView_cross"
        android:layout_width="@dimen/icon_no_connection"
        android:layout_height="@dimen/icon_no_connection"
        android:src="@drawable/ic_cross"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/imageView_line_right"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView_line_left"
        app:layout_constraintTop_toTopOf="@+id/imageView_line_left" />

    <ImageView
        android:id="@+id/imageView_line_left"
        android:layout_width="@dimen/icon_no_connection"
        android:layout_height="@dimen/icon_no_connection"
        android:src="@drawable/ic_line"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/imageView_cross"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView_smartphone"
        app:layout_constraintTop_toTopOf="@+id/imageView_smartphone" />

    <ImageView
        android:id="@+id/imageView_line_right"
        android:layout_width="@dimen/icon_no_connection"
        android:layout_height="@dimen/icon_no_connection"
        android:src="@drawable/ic_line"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/imageView_camera"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView_cross"
        app:layout_constraintTop_toTopOf="@+id/imageView_cross" />

    <ProgressBar
        android:id="@+id/loading_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/colorPrimary"
        android:indeterminateTintMode="src_atop"
        app:layout_constraintBottom_toBottomOf="@+id/mjpegView"
        app:layout_constraintEnd_toEndOf="@+id/mjpegView"
        app:layout_constraintStart_toStartOf="@+id/mjpegView"
        app:layout_constraintTop_toTopOf="@+id/mjpegView" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="55dp"
        android:visibility="invisible"
        android:background="@color/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mjpegView" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/tabLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/tablayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mjpegView"
        app:layout_constraintVertical_bias="1.0"
        app:tabIndicatorHeight="0dp"
        app:tabRippleColor="@null">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </com.google.android.material.tabs.TabLayout>

    <TextView
        android:id="@+id/textView_pan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/pan"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/fragment_container_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mjpegView" />

    <TextView
        android:id="@+id/textView_pan_value"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/fragment_container_view"
        app:layout_constraintStart_toEndOf="@+id/textView_pan"
        app:layout_constraintTop_toBottomOf="@+id/mjpegView" />

    <TextView
        android:id="@+id/textView_tild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/tild"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/fragment_container_view"
        app:layout_constraintStart_toEndOf="@+id/textView_pan_value"
        app:layout_constraintTop_toBottomOf="@+id/mjpegView" />

    <TextView
        android:id="@+id/textView_tild_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/fragment_container_view"
        app:layout_constraintStart_toEndOf="@+id/textView_tild"
        app:layout_constraintTop_toBottomOf="@+id/mjpegView" />

    <ImageButton
        android:id="@+id/imageButton_add_position"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:background="@color/colorBackground"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_add_position"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/fragment_container_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView_tild"
        app:layout_constraintTop_toBottomOf="@+id/mjpegView" />

    <TextView
        android:id="@+id/textView_camera_not_connected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/camera_not_connected"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/fragment_container_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mjpegView" />

    <ImageView
        android:id="@+id/imageView_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_info"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/fragment_container_view"
        app:layout_constraintStart_toEndOf="@+id/textView_camera_not_connected"
        app:layout_constraintTop_toBottomOf="@+id/mjpegView" />

</androidx.constraintlayout.widget.ConstraintLayout>